# vvs-mining

.github/workflows/: backend.yml  frontend.yml
analysis/: analysis.ipynb
backend/: Cargo.toml  Dockerfile  README.md
backend/src/: main.rs  models.rs
deployment/: api.env.example  db.env.example  docker-compose.prod.yml
extraction/: .gitignore  Cargo.toml  main.py  requirements.txt
extraction/src/: main.rs
mining/: .gitignore  Dockerfile  db.py  discord_logging.py  download.py  requirements.txt  test.py  utils.py  vvs-miner-container.service  vvs-miner-timer.service  vvs_hf_stations.csv  vvs_lf_stations.csv  vvs_sbahn_haltestellen_2022.csv
mining-frontend/: Dockerfile  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  vite.config.ts
mining-frontend/src/: app.html
mining-frontend/src/lib/: stores.ts
mining-frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts  Navbar.svelte  TableWithPaginator.svelte  haltestellen.json
mining-frontend/src/routes/delay_infos/: +page.svelte  +page.ts  Accordion.svelte  FormDate.svelte  FormTimeframe.svelte
mining-frontend/src/routes/line_delays/: +page.svelte  +page.ts  Accordion.svelte  FormDate.svelte  FormTimeframe.svelte
mining-frontend/src/routes/lines/: +page.svelte
mining-frontend/src/routes/map/: +page.svelte
mining-frontend/src/routes/station_delays/: +page.svelte  +page.ts  Accordion.svelte  FormTimeframe.svelte
mining-frontend/src/routes/station_infos/: +page.svelte  +page.ts  Accordion.svelte  FormDate.svelte  FormTimeframe.svelte
