[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.4", features = ["query"] }
axum-macros = "0.3.2"
bb8 = "0.8.0"
bb8-postgres = "0.8.1"
envy = "0.4.2"
serde = { version = "1.0.152", features = ["derive"] }
time = { version = "0.3.19", features = ["serde-human-readable"] }
tokio = { version = "1.25.0", features = ["full"] }
tokio-postgres = { version = "0.7.7", features = ["with-time-0_3"] }
tower-http = { version = "0.3.5", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
utoipa = { version = "3.0.1", features = ["axum_extras", "time"] }
utoipa-swagger-ui = { version = "3.0.2", features = ["axum"] }
